Merged resources functionality ported to new ctx logics